# piper-phonemize

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  Package.swift  README.md  build-android-arm64-v8a.sh  build-android-armv7-eabi.sh  build-android-x86-64.sh  build-android-x86.sh  build-ios.sh  build-swift-macos.sh  build-wasm-simd-browser.sh  build-wasm-simd-nodejs.sh  new-release.sh  setup.py  todo-go-api.md  todo2.md
.github/scripts/node-addon/: README-optional.md  README.md  index.js  package-optional.json  package.json  run.sh
.github/workflows/: build-android.yaml  build-rust-libs.yaml  build-tauri-apps.yaml  build-wasm.yaml  build-wheel-linux-aarch64.yaml  build-wheel-linux-arm64.yaml  build-wheel-linux-armv7.yaml  build-wheel-linux.yaml  build-wheel-macos-arm64.yaml  build-wheel-macos-universal2.yaml  build-wheel-macos-x86_64.yaml  build-wheel-win-x64.yaml  build-wheel-windows-arm64.yaml  build-wheel-windows-x64.yaml  build-wheel-windows-x86.yaml  main.yml  npm-addon-linux-arm64.yaml  npm-addon-linux-x64.yaml  npm-addon-macos.yaml  npm-addon-win-x64.yaml  npm-addon-win-x86.yaml  npm-addon.yaml  npm.yaml  pascal.yaml  release-go.yaml  release-rust.yaml  swift-release.yaml  swift.yaml  test-go-package.yaml  test-go.yaml  test-rust.yaml  test.yml
go-api-examples/: README.md  go.mod  go.sum  main.go
nodejs-addon-examples/: README.md  main.js  package.json  simple.js
nodejs-examples/: README.md  main.js  package.json  simple.js
pascal-api-examples/: example.pas  run.sh
piper_phonemize/: .gitignore  __init__.py
piper_phonemize_build/: cmake_extension.py
rust/: Cargo.toml  check.sh  publish.sh
rust-api-examples/: Cargo.toml  run-multiple-languages.sh  run-phonemize.sh
rust-api-examples/examples/: multiple_languages.rs  phonemize.rs
rust/piper-phonemize/: Cargo.toml  build.rs
rust/piper-phonemize-sys/: Cargo.toml  build.rs
rust/piper-phonemize-sys/src/: lib.rs
rust/piper-phonemize/src/: lib.rs
scripts/go/: defines.go.jinja  generate.py  release.sh  ssh_config
scripts/go/_internal/: c-api.h
scripts/go/_internal/lib/x86_64-apple-darwin/: libpiper_phonemize_core.dylib  libpiper_phonemize_cxx_api.dylib
scripts/node-addon-api/: CMakeLists.txt  package.json  run.sh
scripts/node-addon-api/lib/: addon-static-import.js  addon.js  piper-phonemize.js
scripts/node-addon-api/src/: phonemize.cc  phonemize.h  piper-phonemize-addon.cc
scripts/npm/: README.md  index.js  package.json
spm-examples/: Package.swift  README.md  run.sh
spm-examples/Sources/: main.swift
src/: c-api.cpp  c-api.h  cxx-api.cpp  cxx-api.h  main.cpp  module.modulemap  phonemize.cpp  piper-phonemize-symbols-c.exp  piper-phonemize-symbols-c.lds  piper-phonemize-symbols-cxx.exp  piper-phonemize-symbols-cxx.lds  python.cpp  python_test.py  test-c-api.cpp  test-cxx-api.cpp  test.cpp
src/pascal-api/: piper_phonemize.pas
swift-api-examples/: PiperPhonemize.swift  example.swift  run.sh
tauri-examples/: .gitignore  README.md  debug-note.md  run.sh
tauri-examples/src/: index.html
tauri-examples/src-tauri/: Cargo.toml  tauri.conf.json
tauri-examples/src-tauri/src/: lib.rs  main.rs
wasm/: CMakeLists.txt
wasm/browser/: CMakeLists.txt  app-phonemize.js  index.html  piper-phonemize-wasm-main.cc  piper-phonemize.js
wasm/browser/assets/: README.md
wasm/nodejs/: CMakeLists.txt  piper-phonemize-wasm-nodejs.cc  piper-phonemize.node.js
