[package]
name = "rust-api-examples"
version = "0.3.5"
edition = "2021"

[features]
default = ["static"]
static = ["piper-phonemize/static"]
shared = ["piper-phonemize/shared"]

[dependencies]
# piper-phonemize = { path = "../rust/piper-phonemize", default-features = false }
piper-phonemize= { version = "0.3.5", default-features = false }

[[example]]
name = "phonemize"
path = "examples/phonemize.rs"

[[example]]
name = "multiple_languages"
path = "examples/multiple_languages.rs"
