[package]
name = "piper-phonemize-sys"
version = "0.3.2"
edition = "2021"
description = "Raw FFI bindings to the piper-phonemize C API"
license = "GPL-3.0-or-later"
links = "piper-phonemize"

[features]
default = ["static"]
static = []
shared = []

[build-dependencies]
bzip2 = "0.4"
tar = "0.4"
ureq = "2"
