[package]
name = "piper-phonemize"
version = "1.4.7"
edition = "2021"
description = "Phonemization library for Piper text-to-speech using espeak-ng"
license = "GPL-3.0-or-later"

[features]
default = ["static"]
static = ["piper-phonemize-sys/static"]
shared = ["piper-phonemize-sys/shared"]

[build-dependencies]
walkdir = "2"

[dependencies]
piper-phonemize-sys = { path = "../piper-phonemize-sys", version = "1.4.7", default-features = false }
bzip2 = "0.4"
tar = "0.4"
