[package]
name = "piper-phonemize"
version = "0.3.1"
edition = "2021"
description = "Phonemization library for Piper text-to-speech using espeak-ng"
license = "GPL-3.0-or-later"

[features]
default = ["static"]
static = ["piper-phonemize-sys/static"]
shared = ["piper-phonemize-sys/shared"]

[build-dependencies]
walkdir = "2"

[dependencies]
piper-phonemize-sys = { path = "../piper-phonemize-sys", version = "0.3.1", default-features = false }
bzip2 = "0.4"
tar = "0.4"
