[package]
name = "piper-phonemize-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "piper_phonemize_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Use local path for Android gcc_s fix; switch to "0.3.0" after next release
piper-phonemize = { path = "../../rust/piper-phonemize" }
# piper-phonemize= { version = "0.2.1"}
